scrollbar fix

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -52,6 +52,14 @@ body {
   align-items: stretch;
 }
 
+*{
+  -ms-overflow-style: none;
+  
+}
+::-webkit-scrollbar {
+  display: none;
+}
+
 html,
 body {
   max-width: 100vw;
